# job_postings_pipeline

./: .gitignore  .mcp.json  README.md  dbt_project.yml  main.py  pyproject.toml
agent/: agent.py
dbt_project/: dbt_project.yml
dbt_project/models/dimensions/: dims_staging__dim_dates.sql  dims_staging__dim_location.sql  dims_staging__dim_roles.sql
dbt_project/models/facts/: facts_staging__job_postings_fact.sql
dbt_project/models/marts/: average_salary_by_location.sql  average_salary_by_role.sql
dbt_project/models/staging/: sources.yml  stg_raw__job_postings.sql
ingestion/: extract.py  load_duckdb.py  load_snowflake.py  transform.py
mcpserver/: server.py
utils/: my_exception.py  useful_functions.py
